--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,12 +1,9 @@
-#account-page.account-page
-  .account-page__inner.clearfix
-    .account-page__inner--left.account-page__header
-      %h2 Create Account
-      %h5 新規アカウントの作成
-      = render "devise/shared/links"
-    .account-page__inner--right.user-form
-      = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-        = devise_error_messages!
+.account-page
+  %h2 Book Connect
+  .account-page__inner
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = devise_error_messages!
+      .account-page__inner--left
         .field
           .field-label
             = f.label :name
@@ -17,6 +14,7 @@
             = f.label :email
           .field-input
             = f.email_field :email
+      .account-page__inner--right
         .field
           .field-label
             = f.label :password
@@ -28,5 +26,8 @@
             = f.label :password_confirmation
           .field-input
             = f.password_field :password_confirmation, autocomplete: "off"
-        .actions
-          = f.submit "Create Account", class: 'btn'
+        .field
+          .actions
+            = f.submit "アカウント作成", class: 'btn'
+            .login-btn
+              = render "devise/shared/links"
