ナビバーの編集とサンプル画像を取得

--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -17,9 +17,9 @@
       %p Book&nbsp;Shelf
     .nav-left__book-counter 総登録数：
   .nav-right
-    .nav-right__favorite
-    .nav-right__genre
-    .nav-right__author
+    .nav-right__favorite お気に入り
+    .nav-right__genre ジャンル
+    .nav-right__author 著者
 
 
 .content-main
@@ -63,7 +63,7 @@
           .book-image
           .book-title
         = image_tag "succulent.png", alt: "多肉植物", class: "succulent"
-      .succulent
+      -# .succulent
     .bookshelf-floor
 
   .bookshelf
