--- a/app/assets/stylesheets/modules/_books.scss
+++ b/app/assets/stylesheets/modules/_books.scss
@@ -9,7 +9,6 @@
     width: 400px;
     &__user-info{
       height: 40px;
-      // margin: 10px 30px;
       display: flex;
       &__name{
         height: 40px;
@@ -35,7 +34,6 @@
           position: absolute;
           left: 5px;
           top: 6px;
-          // z-index: 2;
         }
       }
     }
@@ -43,6 +41,7 @@
   &__center{
     width: 50%;
     background-color: red;
+    padding: 5px;
   }
   &__right{
     width: 30%;
@@ -99,23 +98,30 @@
     width: 50%;
     display: flex;
     justify-content: flex-end;
+    text-align: center;
+    font-size: 16px;
+    line-height: 48px;
+    padding: 10px;
     &__favorite{
       height: 100%;
-      width: 100px;
+      width: 96px;
       margin-right: 30px;
-      background-color: yellow;
+      color: #09f;
+      border: solid 2px #0ff;
     }
     &__genre{
       height: 100%;
-      width: 100px;
+      width: 96px;
       margin-right: 30px;
-      background-color: yellow;
+      color: #09f;
+      border: solid 2px #0ff;
     }
     &__author{
       height: 100%;
-      width: 100px;
+      width: 96px;
       margin-right: 30px;
-      background-color: yellow;
+      color: #09f;
+      border: solid 2px #0ff;
     }
   }
 }
@@ -144,13 +150,12 @@
       z-index: 2;
       display: flex;
       .book-item-block{
-        background-color: seagreen;
+        background-color: snow;
         height: 250px;
         width: 200px;
         margin: 25px;
         transition: 0.2s ease-in-out;
         &:hover {
-          opacity: 0.8;
           height: 260px;
           width: 210px;
           transition: 0.2s ease-in-out;
