--- a/app/views/books/edit.html.haml
+++ b/app/views/books/edit.html.haml
@@ -4,11 +4,15 @@
       .header__left__user-info__name
         = current_user.name
       .header__left__user-info__image
+        .fas.fa-user
+
+.new 本情報の編集
 
 .form
   .form__title
   = form_for(@book) do |n|
     .form__main
+      .form__main__show-img
       .form__main__input
         -# .form__main__input__title
         = n.text_field :title, class: "form__main__input__title"
@@ -20,6 +24,5 @@
         -# .form__main__input__img__img-path
         -# .form__main__input__img__select-img
         -# .form__main__input__total-pages
-      .form__main__show-img
     -# .form__send-btn
     = n.submit "Update", class: 'form__send-btn'
