--- a/app/assets/stylesheets/modules/_books.scss
+++ b/app/assets/stylesheets/modules/_books.scss
@@ -127,63 +127,85 @@
 }
 
 .content-main{
-  height: 100%;
+  height: calc(100% - 50px);
   width: 100%;
   background-color: snow;
-  // background-image: url("../../images/content-main.jpg");
   .bookshelf{
+    border-radius: 5px;
     margin: 0 70px;
     border-left: solid 30px #200;
     border-right: solid 30px #200;
-    .bookshelf-head{
-      background-color: #200;
-      height: 80px;
-      width: 100%;
-    }
-    .bookshelf-back{
-      background: linear-gradient(to bottom, #300, #400);
-      height: 250px;
-      width: 100%;
-    }
-    .book-list{
-      height: 300px;
-      z-index: 2;
-      display: flex;
-      .book-item-block{
-        background-color: snow;
+    .bookshelf-record{
+      .bookshelf-head{
+        background-color: #200;
+        height: 80px;
+        width: 100%;
+      }
+      .bookshelf-back{
+        background: linear-gradient(to bottom, #300, #400);
         height: 250px;
-        width: 200px;
-        margin: 25px;
-        transition: 0.2s ease-in-out;
-        &:hover {
-          height: 260px;
-          width: 210px;
+        width: 100%;
+      }
+      .book-list{
+        height: 300px;
+        z-index: 2;
+        display: flex;
+        .book-item-block{
+          background-color: snow;
+          height: 280px;
+          width: 200px;
+          margin: 0 25px 25px;
           transition: 0.2s ease-in-out;
+          &:hover {
+            transform: scale(1.1);
+            transition: 0.3s ease-in-out;
+          }
+        &__image{
+          height: 225px;
+          width: 160px;
+          margin: 15px 20px 0;
+        }
+        &__nav{
+          height: 40px;
+          width: 100%;
+          text-align: center;
+          line-height: 40px;
+          display: flex;
+          &__title{
+            width: 70%;
+            font-size: 16px;
+          }
+          &__pages{
+            width: 30%;
+            font-size: 12px;
+          }
+        }
+        }
+        .table-clock{
+          height: 150px;
+          width: 200px;
+          margin: 125px 0 0;
+        }
+        .succulent{
+          height: 150px;
+          width: 200px;
+          margin: 150px 0 0;
+        }
+        .cat{
+          height: 200px;
+          width: 200px;
+          margin: 125px 0 0;
         }
       }
-      .table-clock{
-        height: 150px;
-        width: 200px;
-        margin: 125px 20px 0;
+      .bookshelf-floor{
+        background-color: #100;
+        height: 50px;
+        width: 100%;
       }
-      .succulent{
-        height: 150px;
-        width: 200px;
-        margin: 150px 20px 0;
-      }
-      .cat{
-        height: 200px;
-        width: 200px;
-        margin: 125px 20px 0;
-      }
-    }
-    .bookshelf-floor{
-      background-color: #100;
-      height: 50px;
-      width: 100%;
     }
   }
 }
+
 
 .footer{
   height: 50px;
