--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -1,6 +1,6 @@
 - if controller_name != 'sessions'
-  = link_to "ログイン", new_session_path(resource_name), class: 'btn'
+  = link_to "ログイン画面へ", new_session_path(resource_name), class: 'btn'
   %br/
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "新規登録", new_registration_path(resource_name), class: 'btn'
+  = link_to "アカウント作成", new_registration_path(resource_name), class: 'new_account'
   %br/
