--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -29,6 +29,36 @@
       font-size: 16px;
       border-left: solid 2px #ababab;
       border-radius: 3%;
+      .content{
+        height: 40px;
+        border-radius: 7px;
+        border: solid 1px #d0d0d0;
+        margin: 80px 50px;
+        cursor: pointer;
+        position: relative;
+        background-color: snow;
+        text-align: center;
+        line-height: 40px;
+        display: flex;
+        justify-content: center;
+        transition: 0.2s ease-in-out;
+        &:hover {
+          background-color: gainsboro;
+          opacity: 0.7;
+          transition: 0.3s ease-in-out;
+        }
+        img{
+          height: 20px;
+          width: 20px;
+          margin: 10px 5px;
+          z-index: 2;
+        }
+        a{
+          z-index: 2;
+          color: #253141;
+          letter-spacing: 1px;
+        }
+      }
     }
   }
 
