--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -7,6 +7,7 @@
         .fas.fa-user
   .header__center
   .header__right
+    = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'logout-btn'
     = link_to new_book_path do
       .book-regist-btn 登録
 
