ベース機能・レイアウト完成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,7 @@
 @import "modules/news";
 @import "modules/shows";
 @import "modules/user";
+@import "modules/search";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "modules/flash";
