--- a/app/assets/stylesheets/modules/_shows.scss
+++ b/app/assets/stylesheets/modules/_shows.scss
@@ -15,44 +15,42 @@
   .book-info{
     height: 400px;
     width: 500px;
-    padding: 30px 30px 0 0;
-    &__author{
-      color: #fff;
-      height: 50px;
-      width: 100%;
-      border-bottom: solid 3px #253141;
-      margin: 50px auto 20px;
-      letter-spacing: 1px;
+    color: snow;
+    padding: 50px 30px 0 0;
+    h4{
+      font-size: 24px;
+      // margin: 30px 0 10px;
     }
-    &__publish{
-      // background-color: snow;
-      color: #fff;
-      height: 50px;
+    p{
+      height: 40px;
       width: 100%;
+      color: rgba(255, 250, 250, 0.7);
+      line-height: 30px;
+      margin: 20px 0;
+      padding: 0 20px;
       border-bottom: solid 3px #253141;
-      margin: 50px auto 20px;
       letter-spacing: 1px;
-    }
-    &__genre{
-      // background-color: snow;
-      color: #fff;
-      height: 50px;
-      width: 100%;
-      border-bottom: solid 3px #253141;
-      margin: 50px auto 20px;
-      letter-spacing: 1px;
-    }
-    &__registed_at{
-      // background-color: snow;
-      color: #fff;
-      height: 50px;
-      width: 100%;
-      border-bottom: solid 3px #253141;
-      margin: 50px auto 20px;
-      letter-spacing: 1px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      -webkit-text-overflow: ellipsis;
+      -o-text-overflow: ellipsis;
+      white-space: nowrap;
     }
   }
 }
+
+.show{
+  color: #200;
+  font-size: 32px;
+  text-align: center;
+  line-height: 60px;
+  border-bottom: solid 5px #900;
+  font-weight: bold;
+  height: 60px;
+  width: 200px;
+  margin: 10px 0 10px 295px;
+}
+
 .book-impression{
   color: #09f;
   background-color: snow;
@@ -62,6 +60,6 @@
   font-weight: bold;
   text-align: center;
   line-height: 97px;
-  border: solid 3px #0ff;
+  border: solid 3px #09f;
   margin: 20px auto 0;
 }
