--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -30,4 +30,5 @@
           .actions
             = f.submit "アカウント作成", class: 'btn'
             .login-btn
-              = render "devise/shared/links"
+              = link_to "Googleでログイン", user_google_oauth2_omniauth_authorize_path, class: 'google-btn', method: :post
+              -# = render "devise/shared/links"
