--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -21,6 +21,50 @@
       width: 348px;
       border-right: solid 2px #ababab;
       border-radius: 3%;
+      .facebook-btn{
+        margin: 60px 49px 10px;
+        height: 40px;
+        letter-spacing: 1px;
+        text-align: center;
+        background-color: #4267b2;
+        border-radius: 20px;
+        color: white;
+        text-align: center;
+        width: 250px;
+        line-height: 40px;
+        transition: 0.2s ease-in-out;
+        a{
+          padding: 20px 40px;
+        }
+        &:hover {
+          opacity: 0.7;
+          transition: 0.2s ease-in-out;
+        }
+      }
+      .content{
+        height: 40px;
+        border-radius: 20px;
+        border: solid 1px #d0d0d0;
+        margin: 20px 50px 0;
+        cursor: pointer;
+        position: relative;
+        background-color: snow;
+        text-align: center;
+        line-height: 40px;
+        display: flex;
+        justify-content: center;
+        transition: 0.2s ease-in-out;
+        &:hover {
+          background-color: gainsboro;
+          opacity: 0.7;
+          transition: 0.3s ease-in-out;
+        }
+        .google-icon{
+          height: 20px;
+          width: 20px;
+          margin: 10px 10px 0 0;
+        }
+      }
     }
     &--right{
       background-color: snow;
@@ -58,6 +102,10 @@
           color: #253141;
           letter-spacing: 1px;
         }
+      }
+      .top-image{
+        width: 100%;
+        margin-top: 80px;
       }
     }
   }
