--- a/app/assets/stylesheets/modules/_books.scss
+++ b/app/assets/stylesheets/modules/_books.scss
@@ -276,6 +276,13 @@
   }
 }
 
+.pagenate{
+  color: gray;
+  text-align: center;
+  font-size: 18px;
+  margin: 20px auto;
+}
+
 .footer{
   color: rgba(255, 255, 255, 0.288);
   height: 100px;
